# XMLReader

./: .gitignore  CMakeLists.txt  generate_solution.bat
Data/: new.xml  root.xml
Solution/: generate_vs2015.bat
Sources/: CMakeLists.txt
Sources/XMLReader/: CMakeLists.TXT  CMakeLists.txt  Section.cpp  Section.hpp  XMLReader.cpp  XMLReader.hpp  main.cpp
Sources/XMLReader/libs/: CMakeLists.txt
Sources/XMLReader/libs/Section_lib/: Section.cpp  Section.hpp
Sources/XMLReader/main/: CMakeLists.txt  main.cpp
source/data/: paths.xml
source/libs/resmgr_lib/: resmgr.cpp  resmgr.hpp  section.cpp  section.hpp
source/libs/sectionLib/: section.cpp  section.hpp
source/main/: main.cpp
source/module/: SectionPy.cpp  SectionPy.hpp
source/module/SectionPy/: ResMgrPy.hpp  SectionPy.cpp  SectionPy.hpp
source/py_scripts/: main.py
